# prefect-iris-classification

./: .gitignore  README.md  docker-compose.vm.yml  docker-compose.yml  env_template.txt  mlflow.Dockerfile  prefect.Dockerfile  pyproject.toml  pytest.ini
deployments/: create_deployment.py  iris_deployment.py
docker_files/: Dockerfile.test  mlflow.Dockerfile  prefect.Dockerfile
flows/: iris_flow_mlflow.py  iris_flows.py
init_blocks/: init.py
tests/: conftest.py  test_deployment.py  test_integration.py
