[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correction-exam-prefect"
version = "0.1.0"
description = "Prefect workflow for Iris classification with MLflow"
dependencies = [
    "prefect>=3.1.0",
    "prefect-github>=0.3.1",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "mlflow>=3.1.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flows*", "init_blocks*", "deployments*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
